--- a/src/app/event/participants-event/participants-event.component.html
+++ b/src/app/event/participants-event/participants-event.component.html
@@ -22,18 +22,25 @@
 
         </mat-expansion-panel-header>
 
-        <div class="flex" (click)="searchParticipants()">
+        <div class="flex">
 
             <div class="l12">
-                <p>Status de Usuario</p>
+                <p class="centerText">Hay # {{ countUsersInEvent() }} Participantes en el evento</p>
                 <div class="flex centerFlex">
-                    <mat-checkbox [(ngModel)]="search.active">Activos</mat-checkbox>
-                    <mat-checkbox [(ngModel)]="search.inactive">Inactivos</mat-checkbox>
+                    <a target="_blank" href="{{ url1 }}">Descargar lista de participantes</a>
+                    <a target="_blank" href="{{ url2 }}">Visualizar con recibos</a>
                 </div>
-
             </div>
 
-            <div class="l12">
+            <div class="l12" (click)="filterParticipants()">
+                <p>Status de Usuario</p>
+                <div class="flex centerFlex">
+                    <mat-checkbox [(ngModel)]="search.active">Alta</mat-checkbox>
+                    <mat-checkbox [(ngModel)]="search.inactive">Baja</mat-checkbox>
+                </div>
+            </div>
+
+            <div class="l12" (click)="filterParticipants()">
                 <p>Tipos de Usuario</p>
                 <div class="flex centerFlex">
                     <mat-checkbox [(ngModel)]="search.typeA">Alumnos</mat-checkbox>
@@ -43,7 +50,7 @@
 
             </div>
 
-            <div class="l12">
+            <div class="l12" (click)="filterParticipants()">
                 <p>Genero</p>
                 <div class="flex centerFlex">
                     <mat-checkbox [(ngModel)]="search.genderM">Masculino</mat-checkbox>
@@ -62,9 +69,15 @@
     <table align="center">
         <thead>
             <tr>
-                <th class="left" (click)="changeSort()">Nombre</th>
+                <th class="left" (click)="changeSort()">Nombre
+                    <i class="material-icons" *ngIf="search.orderBy">arrow_drop_down</i>
+                    <i class="material-icons" *ngIf="!search.orderBy">arrow_drop_up</i>
+                </th>
                 <th>Monto a pagar</th>
-                <th>Activo </th>
+                <th (click)="changeSortStatus()">Activo
+                    <i class="material-icons" *ngIf="search.status">arrow_drop_down</i>
+                    <i class="material-icons" *ngIf="!search.status">arrow_drop_up</i>
+                </th>
             </tr>
             <!-- <th colspan="3">Opciones</th> -->
         </thead>
@@ -73,8 +86,8 @@
 
                 <td class="left">{{ participant.user.name }}</td>
                 <td matTooltip="Clic para personalizar el Monto" matTooltipPosition="below" (click)="editPrice(participant)">
-                    <span></span> ${{ participant.cost }}
-                    <form (submit)="updatePrice(participant)">
+                    <span *ngIf="!participant.edit_price"> ${{ participant.cost }}</span>
+                    <form *ngIf="participant.edit_price" (submit)="updatePrice(participant)">
                         <input id="focusModify" (blur)="finishModify(participant)" [(ngModel)]="participant.cost" name="cost" type="number" min="1">
                     </form>
                 </td>
