--- a/src/app/event/edit-event/edit-event.component.html
+++ b/src/app/event/edit-event/edit-event.component.html
@@ -28,7 +28,7 @@
     </div>
 
 
-    <div class="formData 12">
+    <div class="formData l12">
         <button class="btn">Editar Evento</button>
     </div>
 </form>
