--- a/src/app/receipt/edit-receipt/edit-receipt.component.css
+++ b/src/app/receipt/edit-receipt/edit-receipt.component.css
@@ -24,3 +24,14 @@
     position: relative;
     top: 10px;
 }
+
+.credit {
+    text-align: center !important;
+    font-size: 60px !important;
+}
+
+.credit i {
+    cursor: pointer;
+    font-size: 60px !important;
+    padding: 0 25px;
+}
