--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -5,14 +5,6 @@
 
     <h2 class="centerText">Recibos de Alumnos </h2>
 
-    <a class="linkExcel" href="{{ storage.getUrl() + 'excel/receipt' +storage.getTokenUrl() }}
-    &from={{ search.from }}&to={{ search.to }}&id={{ search.id }}">
-        <p>Exportar a Excel</p>
-        <img src="http://icons.iconarchive.com/icons/graphicloads/filetype/256/excel-xls-icon.png">
-    </a>
-
-
-
     <div *ngIf="notifications.on" class="notifyReceipt">
         <h5>Notificaciones</h5>
         <div>
@@ -52,42 +44,24 @@
                 <tr>
                     <!-- <th class="left">id</th> -->
                     <th>Alumno</th>
-                    <th>Creador</th>
-                    <th>Fecha</th>
                     <th>Monto</th>
                     <th>Tipo</th>
+                    <th>Fecha-Hora Creación</th>
                 </tr>
                 <!-- <th colspan="3">Opciones</th> -->
             </thead>
-            <tbody *ngIf="storage.getUserType() >= 6">
-                <tr *ngFor="let re of receipts" [routerLink]="['/receipt/edit', re.id]">
+            <tbody>
+                <tr *ngFor="let re of receipts" [routerLink]="['/receipt/show', re.id]">
                     <td class="left">{{ re.user.name }}</td>
-                    <td class="left">{{ re.creator.name }}</td>
-                    <td>{{ re.created_at }}</td>
                     <td>$ {{ re.amount }}</td>
-                    <td *ngIf="re.type == 1">Mensualidad</td>
-                    <td *ngIf="re.type == 2">Inscripcion</td>
-                    <td *ngIf="re.type == 3">Día</td>
-                    <td *ngIf="re.type == 4">Uniforme</td>
-                    <td *ngIf="re.type == 5">Evento</td>
+                    <td>{{re.typeView()}}</td>
+                    <td>{{ re.created_at }}</td>
+
+
 
                 </tr>
             </tbody>
 
-            <tbody *ngIf="storage.getUserType() >= 3 && storage.getUserType() <= 5">
-                <tr *ngFor="let re of receipts">
-                    <td class="left">{{ re.user.name }}</td>
-                    <td>{{ re.created_at }}</td>
-                    <td>$ {{ re.amount }}</td>
-                    <td *ngIf="re.type == 1">Mensualidad</td>
-                    <td *ngIf="re.type == 2">Inscripcion</td>
-                    <td *ngIf="re.type == 3">Día</td>
-                    <td *ngIf="re.type == 4">Uniforme</td>
-                    <td *ngIf="re.type == 5">Evento</td>
-
-                </tr>
-
-            </tbody>
         </table>
 
         <mat-paginator (page)="pageAction($event)" [length]="search.total" [pageSize]="search.items" [pageSizeOptions]="[5, 10, 25, 50, 100]">
@@ -97,10 +71,30 @@
 
 </div>
 
-<a [routerLink]="['/receipt/create']">
-    <div class="botonFloat">
-        <a class="botonA" matTooltip="Crear recibo"><i class="material-icons">add</i></a>
+<div class="floatOptions">
+
+    <div class="moreOptions">
+
+        <a target="_blank" href="{{ storage.getUrl() + 'excel/receipt' +storage.getTokenUrl() }}
+            &from={{ search.from }}&to={{ search.to }}&id={{ search.id }}">
+            <button matTooltip="Descargar Recibos" matTooltipPosition="left" mat-fab id="cancelButton">
+                <mat-icon >archive</mat-icon>
+            </button>
+        </a>
+
+        <button matTooltip="Deudores del mes" matTooltipPosition="left" mat-fab>
+            <mat-icon >people</mat-icon>
+        </button>
+
+        <button [routerLink]="['./create']" matTooltip="Crear Recibo" matTooltipPosition="left" mat-fab>
+            <mat-icon >create</mat-icon>
+        </button>
     </div>
-</a>
+
+    <button matTooltip="Opciones de Recibos" matTooltipPosition="left" mat-fab color="pri" class="floatOptionPrincipal">
+                <mat-icon >settings</mat-icon>
+            </button>
+
+</div>
 
 <router-outlet></router-outlet>
