--- a/src/styles.css
+++ b/src/styles.css
@@ -650,7 +650,7 @@ select:-webkit-autofill {
     /* margin-bottom: 5px; */
     transform: scale(.7);
     margin-bottom: -10px;
-    background: darkcyan
+    background: darkcyan;
 }
 
 @page {
