--- a/src/app/parking/parking.component.html
+++ b/src/app/parking/parking.component.html
@@ -1,3 +1,44 @@
-<p>
-  parking works!
-</p>
+<h2 class="centerText">Estacionamiento</h2>
+
+<form class="form" (submit)="setParkings()">
+    <input (change)="setParkings()" type="date" [(ngModel)]="search.from" name="from" id="search"><label><mat-icon>date_range</mat-icon></label>
+    <input (change)="setParkings()" type="date" [(ngModel)]="search.to" name="to" id="search"><label>
+            <mat-icon>date_range</mat-icon></label>
+
+    <input [(ngModel)]="search.name" name="name" id="search" type="search" placeholder="Buscar Usuario" (keyup)="searchInput($event)"><label><mat-icon>search</mat-icon></label>
+
+
+
+</form>
+
+
+
+
+<div class="responsive-table">
+    <table align="center">
+        <thead>
+            <tr>
+                <!-- <th class="left">id</th> -->
+                <th>Usuario</th>
+                <th>Monto</th>
+                <th>Check In</th>
+                <th>Check Out</th>
+                <th>Fecha</th>
+            </tr>
+            <!-- <th colspan="3">Opciones</th> -->
+        </thead>
+        <tbody>
+            <tr *ngFor="let re of parkings" [routerLink]="['./show', re.id]">
+                <td class="left">{{ re.user.name }}</td>
+                <td>$ {{ re.amount }}</td>
+                <td>{{re.check_in}}</td>
+                <td>{{ re.check_out }}</td>
+                <td>{{ re.date_entry }}</td>
+            </tr>
+        </tbody>
+
+    </table>
+
+
+
+</div>
