--- a/src/app/parking/new-parking/new-parking.component.html
+++ b/src/app/parking/new-parking/new-parking.component.html
@@ -1,3 +1,67 @@
-<p>
-  new-parking works!
-</p>
+<mat-progress-bar mode="indeterminate" *ngIf="sendingData > 0" class="barLoader"></mat-progress-bar>
+
+<div class="cardSpace" [@background]="state.background">
+
+    <div class="closeCardBackground" (click)="closePop()">
+        <h5 class="closeIcon">
+            <mat-icon>close</mat-icon>
+        </h5>
+    </div>
+
+    <div class="cardModule" [@card]="state.card">
+
+        <h2 class="centerText">Crear Entrada Estacionamiento</h2>
+
+        <div class="l12">
+            <label>Buscar:</label><br>
+            <input class="l12" [(ngModel)]="search" name="search" type="search" [matAutocomplete]="auto" (keyup)="searchSugest($event)">
+
+            <mat-autocomplete #auto="matAutocomplete">
+                <mat-option *ngFor="let user of sugests" [value]="user.name" (onSelectionChange)="selectUserSugest(user)">
+                    {{ user.name }}
+                </mat-option>
+            </mat-autocomplete>
+
+        </div>
+
+        <form class="flex" (submit)="createReceipt()">
+
+            <div class="formData l12">
+                <label>Usuario Elegido:</label><br>
+                <p *ngIf="!parking.user.name">Seleccione un Usuario</p>
+                <p *ngIf="parking.user.name">{{ parking.user.name }}</p>
+                <small class="error" *ngIf="parking.validations.user == 1">Es necesario elegir un Usuario</small>
+            </div>
+
+            <div class="formData l6">
+                <label>Fecha:</label><br>
+                <input [(ngModel)]="parking.date_entry" name="date_entry" type="date">
+                <small class="error" *ngIf="parking.validations.date == 1">Campo requerido</small>
+            </div>
+
+            <div class="formData l6">
+                <label>Check In:</label><br>
+                <input [(ngModel)]="parking.check_in" name="check_in" type="time">
+                <small class="error" *ngIf="parking.validations.check_in == 1">Campo requerido</small>
+            </div>
+
+            <div class="formData l6">
+                <label>Check Out:</label><br>
+                <input [(ngModel)]="parking.check_out" name="check_out" type="time">
+            </div>
+
+            <div class="formData l6">
+                <label>Monto:</label><br>
+                <input [(ngModel)]="parking.amount" name="amount" type="number">
+            </div>
+
+
+            <div class="formData l12">
+                <button class="btn 12">Crear Entrada</button>
+            </div>
+
+        </form>
+
+
+    </div>
+</div>
