improve on filter users

--- a/src/app/user/filter-user/filter-user.component.html
+++ b/src/app/user/filter-user/filter-user.component.html
@@ -9,37 +9,55 @@
     </div>
 
     <div class="cardModule" [@card]="state.card">
-        <h2>Exportar Usuario Excel</h2>
+        <h2 class="centerText">Exportar Usuario Excel</h2>
 
         <div class="flex" (click)="validateFilter()">
 
             <div class="l12">
-                <p>Status de Usuario</p>
-                <mat-checkbox [(ngModel)]="active">Activos</mat-checkbox>
-                <mat-checkbox [(ngModel)]="inactive">Inactivos</mat-checkbox>
+                <h5 class="centerText">Status de Usuario</h5>
+                <div class="flex centerFlex">
+                    <mat-checkbox [(ngModel)]="active">Activos</mat-checkbox>
+                    <mat-checkbox [(ngModel)]="inactive">Inactivos</mat-checkbox>
+                </div>
+
             </div>
 
             <div class="l12">
-                <p>Tipos de Usuario</p>
-                <mat-checkbox [(ngModel)]="typeA">Alumnos</mat-checkbox>
-                <mat-checkbox [(ngModel)]="typeT">Trabajadores</mat-checkbox>
-                <mat-checkbox [(ngModel)]="typeO">Otros</mat-checkbox>
+                <h5 class="centerText">Tipos de Usuario</h5>
+                <div class="flex centerFlex">
+                    <mat-checkbox [(ngModel)]="typeA">Alumnos</mat-checkbox>
+                    <mat-checkbox [(ngModel)]="typeT">Trabajadores</mat-checkbox>
+                    <mat-checkbox [(ngModel)]="typeO">Otros</mat-checkbox>
+                </div>
             </div>
 
             <div class="l12">
-                <p>Genero</p>
-                <mat-checkbox [(ngModel)]="genderM">Masculino</mat-checkbox>
-                <mat-checkbox [(ngModel)]="genderF">Femenino</mat-checkbox>
+                <h5 class="centerText">Genero</h5>
+                <div class="flex centerFlex">
+                    <mat-checkbox [(ngModel)]="genderM">Masculino</mat-checkbox>
+                    <mat-checkbox [(ngModel)]="genderF">Femenino</mat-checkbox>
+                </div>
             </div>
 
             <div class="l12">
-                <p>Filtrado Por Edades</p>
-                <input [(ngModel)]="age1" type="number" min="0" placeholder="Desde" onchange="validateFilter()">
-                <input [(ngModel)]="age2" type="number" min="0" placeholder="Hasta" onchange="validateFilter()">
+                <h5 class="centerText">Filtrado Por Edades</h5>
+                <div class="flex centerFlex">
+                    <input [(ngModel)]="age1" type="number" min="0" placeholder="Desde" (keyup)="validateFilter()">
+                    <input [(ngModel)]="age2" type="number" min="0" placeholder="Hasta" (keyup)="validateFilter()">
+                </div>
 
             </div>
 
-            <a *ngIf="validation" class="btn" href="{{ storage.getUrl() + 'excel/users' +storage.getTokenUrl() }}&active={{ active }}&inactive={{ inactive }}&typeA={{ typeA }}&typeT={{ typeT }}&typeO={{ typeO }}&genderM={{ genderM }}&genderF={{ genderF }}&age2={{ age2 }}&age1={{ age1 }}">Descargar Excel</a>
+            <div class="l12">
+                <h5 class="centerText">Filtrado Por Horas</h5>
+                <div class="flex centerFlex">
+                    <input [(ngModel)]="hours1" type="number" min="0" placeholder="Desde" (keyup)="validateFilter()">
+                    <input [(ngModel)]="hours2" type="number" min="0" placeholder="Hasta" (keyup)="validateFilter()">
+
+                </div>
+            </div>
+
+            <a *ngIf="validation" class="btn centerText" href="{{ storage.getUrl() + 'excel/users' +storage.getTokenUrl() }}&active={{ active }}&inactive={{ inactive }}&typeA={{ typeA }}&typeT={{ typeT }}&typeO={{ typeO }}&genderM={{ genderM }}&genderF={{ genderF }}&age2={{ age2 }}&age1={{ age1 }}&hours1={{ hours1 }}&hours2={{ hours2 }}">Descargar Excel</a>
 
         </div>
 
